Test/git-issues/git-issue-227.dfy.expect
git-issue-227.dfy(89,22): Error: all lines in a calculation must have the same type (got seq<AbstractMap.View> after AbstractMap.Variables)
git-issue-227.dfy(88,16): Error: arguments must have comparable types (got AbstractMap.Variables and seq<AbstractMap.View>)
git-issue-227.dfy(89,22): Error: arguments must have comparable types (got seq<AbstractMap.View> and AbstractMap.Variables)
3 resolution/type errors detected in git-issue-227.dfy
